--- a/lms/src/main/resources/templates/association/classroom/detailClassroom.html
+++ b/lms/src/main/resources/templates/association/classroom/detailClassroom.html
@@ -33,7 +33,7 @@
 			</tr>
 			<tr>
 				<td>수용인원</td>
-				<td th:text="${info.classroomMaximumNumber}" th:value="${info.classroomMaximumNumber}"></td>
+				<td th:text="${info.classroomMaximumNo}" th:value="${info.classroomMaximumNo}"></td>
 			</tr>
 		</table>
 	</form>
