--- a/lms/src/main/resources/templates/association/lecture/addNoticeLecture.html
+++ b/lms/src/main/resources/templates/association/lecture/addNoticeLecture.html
@@ -9,62 +9,107 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+
 <script>
 $(document).ready(function(){
+	// 강의개요항목 선택했을 시 출력하기
 	$('#infoLectureSort').change(function(){
 		console.log("강의개요항목 :"+$('#infoLectureSort').val());
+		// 강의표준명 option(nameList) 출력을 위한 비동기방식 시작
+		$.ajax({
+			url:'/getInfoLectureNameList'
+			,data:{infoLectureSort:$('#infoLectureSort').val()}
+			,type:'Post'
+			,dataType:'json'
+			,success:function(result){
+				$('#infoLectureName').empty();
+				$('#infoLectureName').append('<option value="">--- 선택 ---</option>');
+				$(result).each(function(i, item){
+					$('#infoLectureName').append('<option value="'+item.infoLectureCode+'">'+item.infoLectureName+'</option>');
+				});
+			}
+		});	
+		// 강의개요명을 선택했을 시 출력하기
+		$('#infoLectureName').change(function(){
+			console.log("강의개요명 :"+$('#infoLectureName').val());
+		});
 	});	
+	// 교사명 선택했을 시 출력하기
 	$('#memberTeacherCode').change(function(){
 		console.log("강의개요항목 :"+$('#memberTeacherCode').val());
 	});	
+	// 교육원명 선택했을 시 출력하기
 	$('#institutionCode').change(function(){
 		console.log("강의개요항목 :"+$('#institutionCode').val());
+		// 강의실 option(classroomList) 출력을 위한 비동기방식 시작
+		$.ajax({
+			url:'/getClassroomList'
+			,data:{institutionCode:$('#institutionCode').val()}
+			,type:'Post'
+			,dataType:'json'
+			,success:function(result){
+				$('#classroomCode').empty();
+				$('#classroomCode').append('<option value="">--- 선택 ---</option>');
+				$(result).each(function(i, item){
+					$('#classroomCode').append('<option value="'+item.classroomCode+'">'+item.classroomName+'</option>');
+				});
+			}
+		});	
+		// 강의실 선택했을 시 출력하기
+		$('#classroomCode').change(function(){
+			console.log("강의개요항목 :"+$('#classroomCode').val());
+		});
 	});	
-	$('#infoLectureName').change(function(){
-		console.log("강의개요항목 :"+$('#infoLectureName').val());
-	});	
-	$('#classroomCode').change(function(){
-		console.log("강의개요항목 :"+$('#classroomCode').val());
-	});
-	// 강의표준명 option(nameList) 출력을 위한 비동기방식 시작
-	$.ajax({
-		url:'/getInfoLectureNameList'
-		,data:{infoLectureSort:$('#infoLectureSort').val()}
-		,type:'Post'
-		,dataType:'json'
-		,success:function(result){
-			$('#infoLectureName').empty();
-			$('#infoLectureName').append('<option value="">--- 선택 ---</option>');
-			$(result).each(function(i, item){
-				$('#infoLectureName').append('<option value="'+item.infoLectureCode+'">'+item.infoLectureName+'</option>');
-			});
-		}
-	});		
-	// 강의실 option(classroomList) 출력을 위한 비동기방식 시작
-	$.ajax({
-		url:'/getClassroomList'
-		,data:{institutionCode:$('#institutionCode').val()}
-		,type:'Post'
-		,dataType:'json'
-		,success:function(result){
-			$('#classroomCode').empty();
-			$('#classroomCode').append('<option value="">--- 선택 ---</option>');
-			$(result).each(function(i, item){
-				$('#classroomCode').append('<option value="'+item.classroomCode+'">'+item.classroomName+'</option>');
-			});
-		}
-	});		
+	// 등록버튼 클릭
 	$('#insert').click(function(){
-		console.log("강의실등록 버튼 클릭..");
+		console.log("등록 버튼 클릭..");
 		// 빈칸, 수용인원 폼 유효성검사	
-		let numberCheck = /[0-9]/;
-		if($('#classroomName').val() ==''){
-			$('#helper').text('강의실명을 지정해주세요!');
-		}else if($('#classroomUse').val() ==''){
-			$('#helper').text('강의용도를 지정해주세요!');
-		}else if(!numberCheck.test($('#classroomMaximumNumber').val())){
-			$('#helper').text('숫자만 입력가능합니다!');
-		} else {
+		let numberCheck = /^[0-9]+$/;
+		if($('#noticeLectureTitle').val() ==''){
+			$('#helper').text('강의공고명을 지정해주세요!');
+			$('#noticeLectureTitle').focus();
+		}else if($('#infoLectureSort').val() ==''){
+			$('#helper').text('강의개요항목을 지정해주세요!');
+			$('#infoLectureSort').focus();
+		}else if($('#infoLectureName').val() ==''){
+			$('#helper').text('강의개요명을 지정해주세요!');
+			$('#infoLectureName').focus();
+		}else if($('#memberTeacherCode').val() ==''){
+			$('#helper').text('강사를 지정해주세요!');
+			$('#memberTeacherCode').focus();
+		}else if($('#institutionCode').val() ==''){
+			$('#helper').text('교육원을 지정해주세요!');
+			$('#institutionCode').focus();
+		}else if($('#classroomCode').val() ==''){
+			$('#helper').text('강의실을 지정해주세요!');
+			$('#classroomCode').focus();
+		}else if(!numberCheck.test($('#noticeLectureMinimumNo').val())){
+			$('#helper').text('수강최소인원을 지정해주세요! 숫자만 입력가능합니다!');
+			$('#noticeLectureMinimumNo').focus();
+		}else if(!numberCheck.test($('#noticeLectureCurrentApplicantNo').val())){
+			$('#helper').text('현재 지원자 수는 숫자만 입력가능합니다!');
+			$('#noticeLectureCurrentApplicantNo').focus();
+		}else if($('#noticeLectureRecruitmentStartDate').val() ==''){
+			$('#helper').text('정확한 모집시작일을 입력해주세요');
+			$('#noticeLectureRecruitmentStartDate').focus();
+		}else if($('#noticeLectureRecruitmentEndDate').val() ==''){
+			$('#helper').text('정확한 모집마감일을 입력해주세요');
+			$('#noticeLectureRecruitmentEndDate').focus();
+		}else if($('#noticeLectureResultDate').val() ==''){
+			$('#helper').text('정확한 모집결과발표일을 입력해주세요!');
+			$('#noticeLectureResultDate').focus();
+		}else if(!numberCheck.test($('#noticeLectureFee').val())){
+			$('#helper').text('강의료는 숫자만 입력가능합니다!');
+			$('#noticeLectureFee').focus();
+		}else if($('#noticeLectureStartDate').val() ==''){
+			$('#helper').text('정확한 강의시작일을 입력해주세요');
+			$('#noticeLectureStartDate').focus();
+		}else if($('#noticeLectureEndDate').val() ==''){
+			$('#helper').text('정확한 강의마감일을 입력해주세요');
+			$('#noticeLectureEndDate').focus();
+		}
+		else {
+			console.log('버튼클릭'+$('#noticeLectureMinimumNo').val());
 			$('#addNoticeLecture').submit();
 		}		
 	});		
@@ -74,38 +119,38 @@ $(document).ready(function(){
 
 <div layout:fragment="content">
 	<h1>강의공고 등록하기</h1>
-	<form id="addNoticeLecture" action="/association/classroom/addClassroom" method="post">
+	<form id="addNoticeLecture" action="/association/lecture/addNoticeLecture" method="post">
 		<div class="form-group">
 			<label>강의공고명 :</label>
 		    <input type="text" class="form-control" id="noticeLectureTitle" name="noticeLectureTitle">
 		</div>
 		<div class="form-group">
 			<label>강의개요 :</label>
-		    <select id="infoLectureSort">
-		    	<option>--- 선택 ---</option>
+		    <select id="infoLectureSort" name="infoLectureSort">
+		    	<option value="">--- 선택 ---</option>
 		    	<option th:each="infoLectureSort:${infoLectureSort}" th:text="${infoLectureSort.infoLectureSort}" th:value="${infoLectureSort.infoLectureSort}"></option>                                                                                                   
 		    </select>
-		    <select id="infoLectureName">
+		    <select id="infoLectureName" name="infoLectureCode">
 		    	<option value="">--- 선택 ---</option>
 		    </select>
 		</div>
 		<div class="form-group">
 			<label>강사명 :</label>
-			<select id="memberTeacherCode">
-				<option>--- 선택 ---</option>
+			<select id="memberTeacherCode" name="memberTeacherCode">
+				<option value="">--- 선택 ---</option>
 				<option th:each="memberTeacher:${memberTeacher}" th:text="${memberTeacher.memberTeacherName}" th:value="${memberTeacher.memberTeacherCode}"></option> 
 			</select>
 		</div>
 		<div class="form-group">
 			<label>교육원명 :</label>
-			<select id="institutionCode">
+			<select id="institutionCode" name="institutionCode">
 				<option>--- 선택 ---</option>
 				<option th:each="institution:${institution}" th:text="${institution.institutionName}" th:value="${institution.institutionCode}"></option> 
 			</select>
 		</div>
 		<div class="form-group">
 			<label>강의실 :</label>
-			<select id="classroomCode">
+			<select id="classroomCode" name="classroomCode">
 				<option value="">--- 선택 ---</option>
 			</select>
 		</div>
@@ -120,34 +165,34 @@ $(document).ready(function(){
 		<div class="row">
 			<div class="col-sm-6">
 				<label>모집시작일 :</label>
-			    <input type="text" class="form-control" th:value="${institutionName}" id="noticeLectureRecruitmentStartDate" name="noticeLectureRecruitmentStartDate">
+			    <input type="date" class="form-control" th:value="${institutionName}" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureRecruitmentStartDate" name="noticeLectureRecruitmentStartDate">
 			</div>
 			<div class="col-sm-6">
 				<label>모집마감일 :</label>
-			    <input type="text" class="form-control" th:value="${institutionName}" id="noticeLectureRecruitmentEndDate" name="noticeLectureRecruitmentEndDate">
+			    <input type="date" class="form-control" th:value="${institutionName}" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureRecruitmentEndDate" name="noticeLectureRecruitmentEndDate">
 			</div>
 		</div>		
 		<div class="form-group">
 			<label>결과발표일 :</label>
-		    <input type="text" class="form-control" th:value="${institutionName}" id="noticeLectureResultDate" name="noticeLectureResultDate">
+		    <input type="date" class="form-control" th:value="${institutionName}" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureResultDate" name="noticeLectureResultDate">
 		</div>
 		<div class="form-group">
 			<label>수강료 :</label>
-		    <input type="text" class="form-control" th:value="${institutionName}" id="noticeLectureFee" name="noticeLectureFee">
+		    <input type="text" class="form-control" th:value="${institutionName}" placeholder="쉼표를 사용하실 수 없습니다.." id="noticeLectureFee" name="noticeLectureFee">
 		</div>
 		<div class="row">
 			<div class="col-sm-6">
 				<label>강의시작일 :</label>
-			    <input type="text" class="form-control" th:value="${institutionName}" id="noticeLectureStartDate" name="noticeLectureStartDate">
+			    <input type="date" class="form-control" th:value="${institutionName}" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureStartDate" name="noticeLectureStartDate">
 			</div>
 			<div class="col-sm-6">
 				<label>강의종료일 :</label>
-			    <input type="text" class="form-control" th:value="${institutionName}" id="noticeLectureEndDate" name="noticeLectureEndDate">
+			    <input type="date" class="form-control" th:value="${institutionName}" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureEndDate" name="noticeLectureEndDate">
 			</div>
-		</div>		
-		
-		<span id="helper"></span>
-		<button id="insert" type="submit"></button>
+		</div>
+				
+		<span id="helper" style="color:red"></span>
+		<button id="insert" type="button">등록하기</button>
 	</form>
 </div>
 </html>
