--- a/lms/src/main/resources/templates/association/institution/addInstitution.html
+++ b/lms/src/main/resources/templates/association/institution/addInstitution.html
@@ -31,7 +31,7 @@ $(document).ready(function(){
 		console.log("교육원등록 버튼 클릭..");
 		
 		// 빈칸, 수용인원 폼 유효성검사	
-		let numberCheck = /[0-9]/;
+		let numberCheck = /^[0-9]+$/;
 		let phoneCheck = /(\d{3}).*(\d{4}).*(\d{4})/;
 		if($('#institutionName').val() ==''){
 			$('#helper').text('교육원명을 지정해주세요!');
