--- a/lms/src/main/resources/templates/association/lecture/subjectList.html
+++ b/lms/src/main/resources/templates/association/lecture/subjectList.html
@@ -71,12 +71,12 @@ $(document).ready(function(){
 <div layout:fragment="content">
 	<!-- infoLecture 리스트 출력화면 -->
 	<h1>협회 : 과목 목록</h1>
-		<select id="infoLectureSortList">
+		<select id="infoLectureSortList" name="infoLectureSortList">
 			<option value="">--강의항목선택--</option>
 			<option th:each="lecSort:${sortList}" th:text="${lecSort.infoLectureSort}" th:value="${lecSort.infoLectureSort}"></option>
 		</select>
 		
-		<select id="infoLectureNameList">
+		<select id="infoLectureNameList" name="infoLectureNameList">
 			<option value="">--강의표준명--</option>
 		</select>
 		
