--- a/lms/src/main/resources/templates/association/evaluation/evaluationTotal.html
+++ b/lms/src/main/resources/templates/association/evaluation/evaluationTotal.html
@@ -94,15 +94,17 @@
     <h3>평가 항목 상세 보기</h3>
     <a type="button" href="/association/evaluation/addEvalByAssociation" class="btn btn-secondary">평가 항목 상세 추가</a>
 	<form id="getEvalByAssociation" action="#" method="post">
-		<div class="form-group">
-			<label>평가 년도 :</label>
-            <select class="form-control" name="evalTotalYear">
+        <div class="form-group">
+            <label>평가 년도 :</label>
+            <select class="form-control" id="evalTotalYear" name="evalTotalYear">
+                <option value="0">전체</option>
                 <option th:each="evalTotalYear:${evalTotalYear}" th:text="${evalTotalYear}" th:value="${evalTotalYear}"></option>
             </select>
         </div>
         <div class="form-group">
             <label>평가 항목 :</label>
-            <select class="form-control" name="evalTotalType">
+            <select class="form-control" id="evalTotalType" name="evalTotalType">
+                <option value="%">전체</option>
                 <option th:each="evalTotalType:${evalTotalType}" th:text="${evalTotalType}" th:value="${evalTotalType}"></option>
             </select>
         </div>
