--- a/lms/src/main/resources/templates/fragments/config.html
+++ b/lms/src/main/resources/templates/fragments/config.html
@@ -10,6 +10,9 @@
 		.red {
 			color: red;
 		}
+		.white {
+			color: white;
+		}
 		p {
 	    text-align: center;
 	    }
@@ -54,39 +57,60 @@
 	        display: block;
 	    }
 	    
+		/* Fixed sidenav, full height */
 		.sidenav {
-		  height: 100%;
-		  width: 200px;
-		  position: fixed;
-		  z-index: 1;
-		  top: 0;
-		  left: 0;
-		  background-color: #111;
-		  overflow-x: hidden;
-		  padding-top: 20px;
+			height: 100%;
+			width: 200px;
+			position: fixed;
+			z-index: 1;
+			top: 0;
+			left: 0;
+			background-color: #111;
+			overflow-x: hidden;
+			padding-top: 20px;
 		}
-		
-		.sidenav a {
-		  padding: 6px 8px 6px 16px;
-		  text-decoration: none;
-		  font-size: 15px;
-		  color: #818181;
-		  display: block;
+
+		/* Style the sidenav links and the dropdown button */
+		.sidenav a, .navdropdown-btn {
+			padding: 6px 8px 6px 16px;
+			text-decoration: none;
+			font-size: 14px;
+			display: block;
+			border: none;
+			background: none;
+			width: 100%;
+			text-align: left;
+			cursor: pointer;
+			outline: none;
 		}
-		
-		.sidenav a:hover {
-		  color: #f1f1f1;
+
+		/* On mouse-over */
+		.sidenav a:hover, .navdropdown-btn:hover {
+			color: #f1f1f1;
 		}
-		
+
+		/* Main content */
 		.main {
-		  margin-left: 160px; /* Same as the width of the sidenav */
-		  font-size: 28px; /* Increased text to enable scrolling */
-		  padding: 0px 10px;
+			margin-left: 200px; /* Same as the width of the sidenav */
+			font-size: 14px; /* Increased text to enable scrolling */
+			padding: 0px 10px;
 		}
-		
+		/* Optional: Style the caret down icon */
+		.fa-caret-down {
+			float: right;
+			padding-right: 8px;
+		}
+
+		/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+		.navdropdown-container {
+			display: none;
+			padding-left: 8px;
+		}
+
+		/* Some media queries for responsiveness */
 		@media screen and (max-height: 450px) {
-		  .sidenav {padding-top: 15px;}
-		  .sidenav a {font-size: 11px;}
+			.sidenav {padding-top: 15px;}
+			.sidenav a {font-size: 18px;}
 		}
 
 	</style>
@@ -97,7 +121,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> <!-- 컨텐츠페이지의 스크립트 영역이 들어감 -->
-    <th:block layout:fragment="script"></th:block>
+	
+	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+	<th:block layout:fragment="script"></th:block>
 </head>
 
 </html>
