--- a/lms/src/main/resources/templates/fragments/institutionSider.html
+++ b/lms/src/main/resources/templates/fragments/institutionSider.html
@@ -2,11 +2,46 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <header th:fragment="siderFragment">
+<script>
+	/*사이드 바 드랍다운 관련 자바 스크립트*/
+	$(document).ready(function() {
+		let navdropdown = document.getElementsByClassName("navdropdown-btn");
+		let i;
+	
+		for (i = 0; i < navdropdown.length; i++) {
+			navdropdown[i].addEventListener("click", function() {
+				this.classList.toggle("active");
+				let dropdownContent = this.nextElementSibling;
+				if (dropdownContent.style.display === "block") {
+					dropdownContent.style.display = "none";
+				} else {
+					dropdownContent.style.display = "block";
+				}
+			});
+		}
+	})
+</script>
 <div class="sidenav bg-light">
-	<a href="/institutionIndex">교육원</a>
-	<a href="/institution/annualFee/annualFee">교육원 사용권한 관리</a>
-	<a href="#clients">Clients</a>
-	<a href="#contact">Contact</a>
+	<a class="text-dark" href="/institutionIndex">교육원</a>
+	<button class="navdropdown-btn"><span class="text-dark">관리1</span>
+		<i style="color:dark" class="fas fa-caret-down"></i>
+	</button>	
+	<div class="navdropdown-container">
+		<button class="navdropdown-btn"><span class="text-dark">관리1.1</span>
+			<i style="color:dark" class="fas fa-caret-down"></i>
+		</button>
+		<div class="navdropdown-container">
+			<a class="text-dark" href="#">Link 11</a>
+			<a class="text-dark" href="#">Link 22</a>
+			<a class="text-dark" href="#">Link 33</a>
+		</div>
+		<a class="text-dark" href="#">관리1.2</a>
+		<a class="text-dark" href="#">관리1.3</a>
+		<a class="text-dark" href="#">관리1.4</a>
+	</div>
+	<a class="text-dark" href="/institution/annualFee/annualFee">교육원 사용권한 관리</a>
+	<a class="text-dark" href="#clients">Clients</a>
+	<a class="text-dark" href="#contact">Contact</a>
 </div>
 </header>
 </html>
