--- a/lms/src/main/resources/templates/fragments/teacherSider.html
+++ b/lms/src/main/resources/templates/fragments/teacherSider.html
@@ -2,8 +2,43 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <header th:fragment="siderFragment">
+<script>
+	/*사이드 바 드랍다운 관련 자바 스크립트*/
+	$(document).ready(function() {
+		let navdropdown = document.getElementsByClassName("navdropdown-btn");
+		let i;
+	
+		for (i = 0; i < navdropdown.length; i++) {
+			navdropdown[i].addEventListener("click", function() {
+				this.classList.toggle("active");
+				let dropdownContent = this.nextElementSibling;
+				if (dropdownContent.style.display === "block") {
+					dropdownContent.style.display = "none";
+				} else {
+					dropdownContent.style.display = "block";
+				}
+			});
+		}
+	})
+</script>
 <div class="sidenav bg-dark">
 	<a class="text-white" href="/">강사</a>
+	<button class="navdropdown-btn"><span class="text-white">관리1</span>
+		<i style="color:white" class="fas fa-caret-down"></i>
+	</button>	
+	<div class="navdropdown-container">
+		<button class="navdropdown-btn"><span class="text-white">관리1.1</span>
+			<i style="color:white" class="fas fa-caret-down"></i>
+		</button>
+		<div class="navdropdown-container">
+			<a class="text-white" href="#">Link 11</a>
+			<a class="text-white" href="#">Link 22</a>
+			<a class="text-white" href="#">Link 33</a>
+		</div>
+		<a class="text-white" href="#">관리1.2</a>
+		<a class="text-white" href="#">관리1.3</a>
+		<a class="text-white" href="#">관리1.4</a>
+	</div>
 	<a class="text-white" href="/">Services</a>
 	<a class="text-white" href="/">Clients</a>
 	<a class="text-white" href="/">Contact</a>
