--- a/lms/src/main/resources/templates/layout/PILayout.html
+++ b/lms/src/main/resources/templates/layout/PILayout.html
@@ -3,16 +3,20 @@
 
 <head th:replace="fragments/config :: configFragment"></head>
 <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-1">
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-10">
 	<header th:replace="fragments/header :: headerFragment"></header>
-	
-	<div layout:fragment="content"></div>
-	
+	<div class="row">
+		<div class="col-sm-1"></div>
+		<div class="col-sm-10">
+			<div layout:fragment="content"></div>
+		</div>
+		<div class="col-sm-1"></div>
+	</div>
 	<footer th:replace="fragments/footer :: footerFragment"></footer>
 	</div>
-	<div class="col-sm-2">
+	<div class="col-sm-1">
     </div>
 </div>
 </html>
