[나현주] 레이아웃 수정

--- a/lms/src/main/resources/templates/layout/PILayout.html
+++ b/lms/src/main/resources/templates/layout/PILayout.html
@@ -10,9 +10,14 @@
 	<div class="row">
 		<div class="col-sm-1"></div>
 		<div class="col-sm-10">
+			<p style="height: 50px"></p>
+			
 			<div layout:fragment="content"></div>
+			
+			<p style="height: 50px"></p>
 		</div>
 		<div class="col-sm-1"></div>
+		
 	</div>
 	<footer th:replace="fragments/footer :: footerFragment"></footer>
 	</div>
