--- a/lms/src/main/resources/templates/layout/PALayout.html
+++ b/lms/src/main/resources/templates/layout/PALayout.html
@@ -9,8 +9,12 @@
 	<header th:replace="fragments/PAHeader :: headerFragment"></header>
 	<div class="row">
 		<div class="col-sm-1"></div>
-		<div class="col-sm-10">		
+		<div class="col-sm-10">
+			<p style="height: 50px"></p>
+			
 			<div layout:fragment="content"></div>
+			
+			<p style="height: 50px"></p>
 		</div>
 		<div class="col-sm-1"></div>
 	</div>	
