--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -14,9 +14,17 @@
 <div layout:fragment="content">
 	<h2>교육원 : 강의관리</h2>
 	<ul>
+		<li><a href="/institution/lecture/addLecture">강의 등록</a></li>
+		<li><a href="/institution/lecture/lectureList">강의 조회 및 관리</a></li>
 		<li><a href="/institution/lecture/subjectList">과목 조회</a></li>
-		<li><a href="/institution/#">#강의 조회</a></li>
 	</ul>
+	
+	<h2>교육원 : 강의실관리</h2>
+	<ul>
+		<li><a href="/institution/classroom/addClassroom">강의실 등록</a></li>
+		<li><a href="/institution/classroom/classroomList">강의실 조회 및 관리</a></li>
+	</ul>
+	
 	<h2>교육원 : 회원관리</h2>
 	<ul>
 		<li><a href="/institution/memberList">회원 조회</a></li>
