--- a/lms/src/main/resources/templates/association/lecture/detailInfoLecture.html
+++ b/lms/src/main/resources/templates/association/lecture/detailInfoLecture.html
@@ -12,7 +12,7 @@
 </th:block>
 
 <div layout:fragment="content">
-	<h1>강의표준 목록</h1>
+	<h1>강의표준 세부사항</h1>
 	<form id="detailInfoLecture" >
 		<table class="table table-striped">
 			<thead>
